<resources>
    <string name="app_name">Prayer Times</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_pray">Next Pray\n</string>
    <string name="fajr">Fajr\n</string>
    <string name="sunrise">SunRise</string>
    <string name="duhr">Duhr</string>
    <string name="asr">Asr</string>
    <string name="maghirb">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="cancel">Cancel</string>
    <string name="show_qibla_diriction_on_map">Show Qibla </string>

    <string name="gps_settings_title">GPS settings</string>
    <string name="gps_settings_text">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="button_ok">Settings</string>
    <string name="msg_permission_not_granted_yet">Location access not available yet</string>
    <string name="msg_permission_granted">Location Access Granted, press GPS button now.</string>
    <string name="toast_permission_required">This app requires Access Location</string>
    <string name="your_location">Your Location: %f,%f</string>
    <string name="show_location">(%f,%f)</string>
    <string name="location_not_ready">Location not ready, please press button again.</string>
    <string name="qibla_direction">Qibla Direction: %f degrees from the north.</string>
    <string name="pls_enable_location">Please turn on Location and press the button again.</string>
    <string name="degree_from_north">degrees from the north.</string>
    <string name="using_last_location">using last location.</string>
    <string name="submit">Submit</string>
    <string name="time_left">time left</string>
    <string name="frist_kindly_choose_your_method">Frist, kindly choose your method</string>
</resources>