<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.prayertimes.ui.home.HomeViewModel">

        </variable>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#42B7B2B3">

        <androidx.cardview.widget.CardView
            android:id="@+id/salat_table"
            android:layout_width="366dp"
            android:layout_height="183dp"
            android:layout_margin="16dp"
            android:backgroundTint="#1D6000"
            app:cardCornerRadius="16dp"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.state.date}"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="DEC 25 2024" />


                    <TextView
                        android:id="@+id/location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date"
                        tools:text="Cairo,Egypt" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height=".5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/next_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line">

                    <TextView
                        android:id="@+id/next_pray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.state.nextPrayer}"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toTopOf="@id/next_pray_text"
                        app:layout_constraintEnd_toStartOf="@id/time_left"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="ISHA" />

                    <TextView
                        android:id="@+id/next_pray_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/next_pray"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/time_left"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/next_pray"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0">

                    </TextView>

                    <TextView
                        android:id="@+id/time_left_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_left"
                        android:textSize="@dimen/_16sp"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/next_pray"
                        app:layout_constraintTop_toBottomOf="@id/time_left">

                    </TextView>

                    <TextView
                        android:id="@+id/time_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.state.timeLeft}"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/time_left_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/next_pray"
                        tools:text="1 hr 16 min">

                    </TextView>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/previous"
            android:layout_width="38dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onClickArrowBack()}"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_pager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/salat_table"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="38dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onClickArrowNext()}"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/salat_table"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/recycler_view_pager"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginHorizontal="@dimen/_16sp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.718"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/salat_table" />

        <Button
            android:id="@+id/qibla"
            android:layout_width="188dp"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="56dp"
            android:backgroundTint="@color/green"
            android:text="@string/show_qibla_diriction_on_map"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_pager" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>


    <!--        <ProgressBar-->
    <!--            android:id="@+id/progressBar"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            app:isVisible="@{viewModel.state.loading}"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent" />-->
